[gd_scene load_steps=6 format=3 uid="uid://dlnv5bicqv8ih"]

[ext_resource type="Script" path="res://src/scripts/menu/main_menu.gd" id="1_1pq65"]
[ext_resource type="PackedScene" uid="uid://danbn6jjfghru" path="res://src/scenes/ui/fade_rect.tscn" id="2_62p08"]
[ext_resource type="PackedScene" uid="uid://xkoglw4lu6ab" path="res://src/scenes/ui/background.tscn" id="2_yycfv"]
[ext_resource type="PackedScene" uid="uid://bs7s2yo0kutpx" path="res://src/scenes/ui/safe_margins.tscn" id="3_o4qee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxbqx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pq65")
metadata/_edit_lock_ = true

[node name="Background" parent="." instance=ExtResource("2_yycfv")]
layout_mode = 1

[node name="SafeMargins" parent="." instance=ExtResource("3_o4qee")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="SafeMargins"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="HBoxContainer2" type="HBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Open Boardgame Framework"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="NewGame" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="Settings" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Panel3" type="Panel" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_sxbqx")

[node name="HBoxContainer" type="VBoxContainer" parent="SafeMargins/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Version x.x.x"

[node name="Label" type="Label" parent="SafeMargins/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Copyright ryanabx 2023"

[node name="FadeRect" parent="." instance=ExtResource("2_62p08")]
layout_mode = 1
mouse_filter = 2

[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SafeMargins/MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
